# flappy-rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: constants.rs  main.rs  plugin.rs
